# LagRochePlot

./: .gitignore  Calculo.py  LagRoche.py  MAIN.py  README.md  Update.py  setup.cfg  setup.py
lagrange_points/: LagRoche.py
lagrange_points.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
lagrange_potential/: __init__.py
lagrange_potential/LagRochePlot.egg-info/: PKG-INFO  SOURCES.txt
