[metadata]
name = LagRochePlot
version = 1.1.2
author = Thomas Salazar, Sebastián López, Esteban Sanchez, Andres Rumillanca    
author_email = thomas.salazar@usach.cl , sebastian.lopez.p@usach.cl , esteban.sanchez.m@usach.cl , andres.rumillanca@usach.cl
description = Herramienta gráfica para visualizar los puntos de Lagrange y potencial de Roche.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Thomas-thief/LagRochePlot
project_urls =
    Bug Tracker = https://github.com/Thomas-thief/LagRochePlot/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = lagrange_potential
packages = find:
python_requires = >=3.6

[options.packages.find]
where = lagrange_potential